WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19358
first line break in <pre> elements ignored (chess boards at
http://rankzero.de/
)
https://bugs.webkit.org/show_bug.cgi?id=19358
Summary
first line break in <pre> elements ignored (chess boards at http://rankzero.de/)
Darin Adler
Reported
2008-06-02 09:25:51 PDT
This is a bug in the HTML tokenizer's discardLF feature, in the HTMLTokenizer::write function. We need to clear the discardLF flag in two cases where we don't today: Entity processing and tag processing.
Attachments
patch
(9.75 KB, patch)
2008-06-02 09:41 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-06-02 09:26:04 PDT
<
rdar://problem/5951986
>
Darin Adler
Comment 2
2008-06-02 09:39:51 PDT
Only tag processing, not entity processing.
Darin Adler
Comment 3
2008-06-02 09:41:41 PDT
Created
attachment 21463
[details]
patch
mitz
Comment 4
2008-06-02 09:47:05 PDT
Comment on
attachment 21463
[details]
patch r=me
Darin Adler
Comment 5
2008-06-02 10:27:33 PDT
Committed revision 34311.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug