WebCore:

2008-06-02  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19358
          <rdar://problem/5951986> first line break in <pre> elements ignored
          (chess boards at http://rankzero.de/)

        Test: fast/parser/pre-first-line-break.html

        * editing/markup.cpp:
        (WebCore::appendStartMarkup): Fix handling of <listing>. Not part of the
        bug mentioned above, but uncovered by the regression test.

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::write): Clear the "discardLF" flag when
        processing a new tag.

LayoutTests:

2008-06-02  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19358
          <rdar://problem/5951986> first line break in <pre> elements ignored
          (chess boards at http://rankzero.de/)

        * fast/parser/pre-first-line-break-expected.txt: Added.
        * fast/parser/pre-first-line-break.html: Added.
        * fast/parser/resources/TEMPLATE.html: Copied from fast/dom/resources/TEMPLATE.html.
        * fast/parser/resources/pre-first-line-break.js: Added.



Canonical link: https://commits.webkit.org/26765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34311 268f45cc-cd09-0410-ab3c-d52691b4dbfc